--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
   	  	<h1 class="header-title">Прищепа Вячеслав</h1>
   	  	<p class="header-subtitle">Верстка на HTML/CSS <br> Разработка сайтов под ключ</p>
   	  	<div class="header-button-block">
-  	  		<button class="header-button">
-  	  			<a href=mailto:virtkey@gmail.com?subject=Запрос разработки сайта">Связаться</a>
-  	  		</button>
+  	  		<a href="https://vk.me/virtkey" class="header-button">Связаться</a>
   	  		<small>Это бесплатно</small>
   	  	</div>
   	  </div>
@@ -92,8 +90,8 @@
 	  		<div class="social-block">
 	  			<p>Подпишитесь:</p>
 	  			<a href="https://www.facebook.com/profile.php?id=100000275369245"><img src="img/facebook-logo-button.png" alt="Facebook"></a>
-	  			<a href="https://vk.com/id12645206"><img src="img/vk-social-logotype.png" alt="Вконтакте"></a>
-	  			<a href="#"><img src="img/telegram-symbol.png" alt="Telegram"></a>
+	  			<a href="https://vk.com/virtkey"><img src="img/vk-social-logotype.png" alt="Вконтакте"></a>
+	  			<a href="https://t.me/virtkey"><img src="img/telegram-symbol.png" alt="Telegram"></a>
 	  			<a href="https://www.youtube.com/channel/UCeswUStU6GVJ1VbDlhflnOA?view_as=subscriber"><img src="img/youtube-symbol.png" alt="YouTube"></a>
 	  		</div>
 	  		<!-- /.social-block -->
@@ -102,9 +100,7 @@
 	  	<div class="col-md-4">
 	  		<div class="footer-cta-block">
 	  			<p class="footer-cta">Напишите мне:</p>
-	  			<button class="footer-button">
-	  				<a href=mailto:virtkey@gmail.com?subject=Запрос разработки сайта">Написать</a>
-	  			</button>
+	  			<a href="https://vk.me/virtkey" class="footer-button">Написать</a>
 	  		</div>
 	  	</div>
 	  	<!-- /.col-4 -->
